# irm_visualizer

./: .gitignore  Cargo.toml  rust_visualizer.py
assets/blocs/: bloc.json
assets/shaders/: filter_fs.glsl  filter_vs.glsl  lighting_fs.glsl  raymarching_fs.glsl
src/: main.rs
src/graph/: buffers.rs  draw.rs  fbo.rs  mesh.rs  mod.rs  shader.rs  texture.rs
src/io/: input_player.rs  mod.rs
src/player/: camera.rs  player.rs
src/world/: mod.rs  world_data.rs
