[package]
name = "bol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
thiserror = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23.14"
rand = "0.8.5"
bracket-noise = "0.8.2"
